--- a/client/src/index.css
+++ b/client/src/index.css
@@ -31,17 +31,15 @@
   }
 }
 
+.ck-body-wrapper {
+  position: fixed;
+  z-index: 1300 !important;
+}
 .main-container {
   font-family: "Roboto";
-  width: 100%;
-
-  margin-left: auto;
-  margin-right: auto;
-  color: #333;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 75vw;
   padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .ck-content {
@@ -50,23 +48,23 @@
   word-break: break-word;
 }
 
-.editor-container_classic-editor
-  .editor-container__editor
-  .ck-editor__editable {
-  min-width: screen;
+.editor-container_classic-editor,
+.editor-container__editor,
+.ck-editor__editable,
+.ck-source-editing-area {
+  min-width: 100%;
   max-width: 900px;
-  min-height: 600px;
+  min-height: 50vh;
 }
 
 .ck-sticky-panel {
-  max-width: 900px;
+  max-width: 100%;
 }
 
 .ck-content h3.category {
   font-family: "Roboto";
   font-size: 20px;
   font-weight: bold;
-  color: #555;
   letter-spacing: 10px;
   margin: 0;
   padding: 0;
@@ -84,16 +82,9 @@
 .ck-content h3.document-subtitle {
   font-family: "Roboto";
   font-size: 20px;
-  color: #555;
   margin: 0 0 1em;
   font-weight: bold;
   padding: 0;
-}
-
-.dark .ck-content h2.document-title,
-.dark .ck-content h3.category,
-.dark .ck-content h3.document-subtitle {
-  color: #f5f6fa;
 }
 
 .ck-content p.info-box {
@@ -168,6 +159,121 @@
 .dark .table {
   background-color: #e7e7e7;
   color: #333;
+}
+
+.dark .ck-source-editing-area textarea {
+  background-color: hsl(270, 1%, 29%);
+  color: hsl(0, 0%, 100%);
+}
+
+.dark {
+  --ck-custom-background: hsl(270, 1%, 29%);
+  --ck-custom-foreground: hsl(0, 41%, 41%);
+  --ck-custom-border: hsl(0, 41%, 41%);
+  --ck-color-base-border: hsl(0, 41%, 41%);
+  --ck-focus-ring: 1px solid var(--ck-color-base-foreground);
+  --ck-custom-white: hsl(0, 0%, 100%);
+  --ck-color-base-active: hsl(0, 41%, 41%);
+  --ck-color-button-on-color: hsl(0, 0%, 100%);
+
+  --ck-color-base-background: var(--ck-custom-background);
+  --ck-color-base-foreground: var(--ck-custom-foreground);
+  --ck-color-source-background: var(--ck-custom-background);
+
+  --ck-color-text: hsl(0, 0%, 98%);
+
+  --ck-color-shadow-drop: hsla(0, 0%, 0%, 0.2);
+  --ck-color-shadow-inner: hsla(0, 0%, 0%, 0.1);
+  /* -- Overrides the default .ck-button class colors. ---------------------------------------- */
+
+  --ck-color-button-default-background: var(--ck-custom-background);
+  --ck-color-button-default-hover-background: hsl(0, 41%, 41%);
+  --ck-color-button-default-active-background: hsl(270, 2%, 20%);
+  --ck-color-button-default-active-shadow: hsl(270, 2%, 23%);
+  --ck-color-button-default-disabled-background: var(--ck-custom-background);
+
+  --ck-color-button-on-background: var(--ck-custom-foreground);
+  --ck-color-button-on-hover-background: hsl(255, 4%, 16%);
+  --ck-color-button-on-active-background: hsl(255, 4%, 14%);
+  --ck-color-button-on-active-shadow: hsl(240, 3%, 19%);
+  --ck-color-button-on-disabled-background: var(--ck-custom-foreground);
+
+  --ck-color-button-action-background: hsl(168, 76%, 42%);
+  --ck-color-button-action-hover-background: hsl(168, 76%, 38%);
+  --ck-color-button-action-active-background: hsl(168, 76%, 36%);
+  --ck-color-button-action-active-shadow: hsl(168, 75%, 34%);
+  --ck-color-button-action-disabled-background: hsl(168, 76%, 42%);
+  --ck-color-button-action-text: var(--ck-custom-white);
+
+  --ck-color-button-save: hsl(123, 98%, 55%);
+  --ck-color-button-cancel: hsl(15, 100%, 56%);
+
+  /* -- Overrides the default .ck-dropdown class colors. -------------------------------------- */
+
+  --ck-color-dropdown-panel-background: var(--ck-custom-background);
+  --ck-color-dropdown-panel-border: var(--ck-custom-foreground);
+
+  /* -- Overrides the default .ck-dialog class colors. ----------------------------------- */
+
+  --ck-color-dialog-background: hsl(0, 0%, 21%);
+  --ck-color-dialog-form-header-border: var(--ck-custom-border);
+
+  /* -- Overrides the default .ck-splitbutton class colors. ----------------------------------- */
+
+  --ck-color-split-button-hover-background: var(
+    --ck-color-button-default-hover-background
+  );
+  --ck-color-split-button-hover-border: var(--ck-custom-foreground);
+
+  /* -- Overrides the default .ck-input class colors. ----------------------------------------- */
+
+  --ck-color-input-background: var(--ck-custom-background);
+  --ck-color-input-border: hsl(257, 3%, 43%);
+  --ck-color-input-text: hsl(0, 0%, 98%);
+  --ck-color-input-disabled-background: hsl(255, 4%, 21%);
+  --ck-color-input-disabled-border: hsl(250, 3%, 38%);
+  --ck-color-input-disabled-text: hsl(0, 0%, 78%);
+
+  /* -- Overrides the default .ck-labeled-field-view class colors. ---------------------------- */
+
+  --ck-color-labeled-field-label-background: var(--ck-custom-background);
+
+  /* -- Overrides the default .ck-list class colors. ------------------------------------------ */
+
+  --ck-color-list-background: var(--ck-custom-background);
+  --ck-color-list-button-hover-background: var(--ck-color-base-foreground);
+  --ck-color-list-button-on-background: var(--ck-color-base-active);
+
+  --ck-color-list-button-on-text: var(--ck-color-base-background);
+
+  /* -- Overrides the default .ck-balloon-panel class colors. --------------------------------- */
+
+  --ck-color-panel-background: var(--ck-custom-background);
+  --ck-color-panel-border: var(--ck-custom-border);
+
+  /* -- Overrides the default .ck-toolbar class colors. --------------------------------------- */
+
+  --ck-color-toolbar-background: var(--ck-custom-background);
+  --ck-color-toolbar-border: var(--ck-custom-border);
+
+  /* -- Overrides the default .ck-tooltip class colors. --------------------------------------- */
+
+  --ck-color-tooltip-background: hsl(252, 7%, 14%);
+  --ck-color-tooltip-text: hsl(0, 0%, 93%);
+
+  /* -- Overrides the default colors used by the ckeditor5-image package. --------------------- */
+
+  --ck-color-image-caption-background: hsl(0, 0%, 97%);
+  --ck-color-image-caption-text: hsl(0, 0%, 20%);
+
+  /* -- Overrides the default colors used by the ckeditor5-widget package. -------------------- */
+
+  --ck-color-widget-blurred-border: hsl(0, 0%, 87%);
+  --ck-color-widget-hover-border: hsl(43, 100%, 68%);
+
+  /* -- Overrides the default colors used by the ckeditor5-link package. ---------------------- */
+
+  --ck-color-link-default: hsl(190, 100%, 75%);
 }
 
 @tailwind components;
